openpracticelibrary/api-gateway/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opl-api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opl-api-gateway
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opl-api-gateway
    spec:
      containers:
      - name: opl-api-gateway-container
        image: quay.io/openpracticelibrary/opl-api-gateway:foo
        ports:
        - containerPort: 4000
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /.well-known/apollo/server-health
            port: 1337
          initialDelaySeconds: 5
          periodSeconds: 5
      terminationGracePeriodSeconds: 60
