openpracticelibrary/api-gateway/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: opl-api-gateway
spec:
  host: ''
  port:
    targetPort: 4000
  to:
    kind: Service
    name: opl-api-gateway-svc
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
